# sms-api

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  config.example.yaml  pi_deploy.sh
.github/workflows/: release.yml
docs/: configuration.md  events.md  http.md  websocket.md
examples/chatgpt-sms/: Cargo.toml  README.md
examples/chatgpt-sms/src/: main.rs  types.rs
examples/gnss-viewer/: README.md  index.html
src/: TODO.md  app.rs  config.rs  events.rs  main.rs  schema.sql  types.rs  webhooks.rs
src/http/: macros.rs  mod.rs  routes.rs  types.rs  websocket.rs
src/modem/: buffer.rs  commands.rs  handlers.rs  mod.rs  parsers.rs  sender.rs  state_machine.rs  types.rs  worker.rs
src/sms/: database.rs  encryption.rs  mod.rs  multipart.rs  types.rs  webhooks.rs
src/sms/schemas/: postgres.sql
