[package]
name = "sms-api"
version = "0.2.3"
edition = "2021"

[dependencies]
pdu-rs = { git = "https://github.com/morgverd/pdu-rs", branch = "main" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
clap = { version = "4.5.39", features = ["derive"] }
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "json"] }
anyhow = "1.0.98"
tokio-serial = "5.4.5"
log = "0.4.27"
env_logger = "0.11.8"
axum = "0.8.4"
tower = "0.5.2"
hex = "0.4.3"
rand = "0.9.1"
base64 = "0.22.1"
aes-gcm = "0.10.3"
cipher = "0.4.4"
futures = "0.3.31"
num-traits = "0.2.19"
